--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Mar 05 17:37:15 PST 2023
+#Fri Mar 24 23:27:44 PDT 2023
 sdk.dir=C\:\\Users\\sabiy\\AppData\\Local\\Android\\Sdk
